--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -12,7 +12,7 @@
         </div>
         
         <div class = "user" style="text-align: center;">         
-            <img src="1.jpg" width="100" height="100" class="profile">
+            <img src="1.jpg" width="100" height="100"alt="userImage" class="profile">
             <span><br>Namkiu</span>
         </div>
         <div class = "menu">
