--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -31,7 +31,7 @@ and open the template in the editor.
     </head>
     <body bgcolor="#bed194">
         <div align="center" style="margin-top:20px">
-            <img style="width:450px;height:300px;" src="logo.png">
+            <img style="width:450px;height:300px;" src="logo.png" alt="webLogo">
         </div>
         <div style="margin-top:10px" >
             <h1 style="text-align:center">MySecret</h1>
