--- a/src/main/resources/public/schedule.html
+++ b/src/main/resources/public/schedule.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>MySecret</title>
-  <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
+ 
   <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+
+
 
 </head>
 <body>
@@ -14,7 +16,7 @@
         </div>
         
         <div style="text-align: center;">         
-            <img src="1.jpg" width="100" height="100" class="profile">
+            <img src="1.jpg" alt="face" width="100" height="100" class="profile">
             <span><br>Namkiu</span>
         </div>
         <div class = "menu">
