--- a/src/main/resources/public/blog.html
+++ b/src/main/resources/public/blog.html
@@ -11,8 +11,8 @@
         <div class ="logo">
             <a href="index.html">MySecret</a>
         </div>       
-        <div class = "user" style="text-align: center;">         
-            <img src="1.jpg" width="100" height="100" class="profile">
+        <div class="user" style="text-align:center;">         
+            <img src="1.jpg" width="100" height="100" class="profile" alt="userImage">
             <span><br>Namkiu</span>
         </div>
         <div class = "menu">
