--- a/src/main/resources/public/messageBoard.html
+++ b/src/main/resources/public/messageBoard.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>MySecret</title>
   <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
+
+
 
 </head>
 <body>
@@ -13,7 +17,7 @@
         </div>
         
         <div class = "user" style="text-align: center;">         
-            <img src="1.jpg" width="100" height="100" class="profile">
+            <img src="1.jpg" width="100" height="100" class="profile" alt="userImage">
             <span><br>Namkiu</span>
         </div>
         <div class = "menu">
