--- a/src/main/resources/public/schedule.html
+++ b/src/main/resources/public/schedule.html
@@ -5,6 +5,10 @@
   <title>MySecret</title>
  
   <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+
+
 
 
 
@@ -16,10 +20,10 @@
         </div>
         
         <div style="text-align: center;">         
-            <img src="1.jpg" alt="face" width="100" height="100" class="profile">
+            <img src="1.jpg" class="profile" alt="face" width="100" height="100" >
             <span><br>Namkiu</span>
         </div>
-        <div class = "menu">
+        <div class ="menu">
             <a href="personInfo.html">Person Info</a> 
             <a href="blog.html">Blog</a>  
             <a href="schedule.html">Schedule</a>
@@ -31,7 +35,7 @@
         <div class="inner">
             <p>Daily Schedule</p>
             <br>
-            <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=bjll9ip8ptvtg7i5ubdghd5lks%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=bjll9ip8ptvtg7i5ubdghd5lks%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FNew_York" ></iframe>
         </div>
     </div>
 </body>
