--- a/src/main/resources/public/personInfo.html
+++ b/src/main/resources/public/personInfo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MySecret</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
 
 
 </head>
