--- a/src/main/resources/public/schedule.html
+++ b/src/main/resources/public/schedule.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MySecret</title>
  
-  <link rel="stylesheet" href="main.css" type="text/css"/>
+  <link rel="stylesheet" href="./stylesheets/main.css" type="text/css"/>
  
 
 
