--- a/src/main/resources/public/personInfo.html
+++ b/src/main/resources/public/personInfo.html
@@ -91,6 +91,6 @@
         </div>
         
     </div>
-    <script src="./js/main.js" type="text/javascript"></script>
+    <script src="./js/processNode.js" type="text/javascript"></script>
 </body>
 </html>
