--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -67,7 +67,7 @@ and open the template in the editor.
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script>   
         $(function(){
-            $("#signup").click()(function(){
+            $("#signup").click(function(){
                 var usrname = $("#usrname").val();
                 var email = $("#email").val();
                 var passwd = $("#passwd").val();
