--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -52,7 +52,7 @@ and open the template in the editor.
                 <input id="passwd" type="password" name="password" placeholder="Password"><br>
                 <input id = "confirmPwd" type="password" name="confirmPwd" placeholder="confirmPwd"><br>
 <!--                <button type="submit">Login</button>-->
-                <button id ="signup" type="submit">Register</button>
+                <button id ="signup">Register</button>
             </form>
             <div>
                 <br>
