--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -77,7 +77,7 @@ and open the template in the editor.
                     $.ajax({
                         contentType:'application/json',
                         url:'/signup',
-                        tyoe:"POST",
+                        type:"POST",
                         datatype:"json",
                         data:send,
                         success:function(data){
