--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -82,7 +82,7 @@ and open the template in the editor.
                         data:send,
                         success:function(data){
                             alert("Register successfully");
-                            window.location.href='/index.html';
+                            window.location.href='/login.html';
                         }
                     });
                     return false;            
