--- a/src/main/resources/public/blog.html
+++ b/src/main/resources/public/blog.html
@@ -9,7 +9,7 @@
 <body>
     <div class ="sidebar">
         <div class ="logo">
-            <a href="index.html">MySecret</a>
+            <a href="index.ftl">MySecret</a>
         </div>       
         <div class="user" style="text-align:center;">         
             <img src="1.jpg" width="100" height="100" class="profile" alt="userImage">
