--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -8,12 +8,12 @@
 <body>
     <div class ="sidebar">
         <div class ="logo">
-            <a href="index.html">MySecret</a>
+            <a href="index.ftl">MySecret</a>
         </div>
         
         <div class = "user" style="text-align: center;">         
             <img src="1.jpg" width="100" height="100" alt="userImage" class="profile">
-            <span><br>Namkiu</span>
+            <span><br>Nam</span>
         </div>
         <div class = "menu">
             <a href="personInfo.html">Person Info</a> 
