--- a/src/main/resources/public/schedule.html
+++ b/src/main/resources/public/schedule.html
@@ -15,7 +15,7 @@
 <body>
     <div class ="sidebar">
         <div class ="logo">
-            <a href="index.ftl">MySecret</a>
+            <a href="/index.ftl">MySecret</a>
         </div>
         
         <div style="text-align: center;">         
