--- a/src/main/resources/public/personInfo.html
+++ b/src/main/resources/public/personInfo.html
@@ -15,7 +15,7 @@
         
         <div class = "user" style="text-align: center;">         
             <img src="1.jpg" width="100" height="100" class="profile" alt="userImage">
-            <span><br>Namkiu</span>
+            <span><br>Nam</span>
         </div>
         <div class ="menu">
             <a href="personInfo.html">Person Info</a> 
