--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -30,7 +30,7 @@
     </div>
     
     
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
                 <script>
                     $(function () {
                         $.ajax({
@@ -41,6 +41,6 @@
                                 $("#hello p").html(hello1.hello);
                         }});
                     });
-                </script>   
+                </script>   -->
 </body>
 </html>
