--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,7 +13,7 @@
         
         <div class = "user" style="text-align: center;">         
             <img src="1.jpg" width="100" height="100" alt="userImage" class="profile">
-            <span><br>Nam</span>
+            <span><br>Namkiu</span>
         </div>
         <div class = "menu">
             <a href="personInfo.html">Person Info</a> 
