--- a/src/main/resources/public/personInfo.html
+++ b/src/main/resources/public/personInfo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MySecret</title>
   <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
-
+  <script src="./js/processNode.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -15,7 +15,7 @@
         
         <div class = "user" style="text-align: center;">         
             <img src="1.jpg" width="100" height="100" class="profile" alt="userImage">
-            <span><br>Nam</span>
+            <span><br>Namkiu</span>
         </div>
         <div class ="menu">
             <a href="personInfo.html">Person Info</a> 
