--- a/src/main/resources/public/personInfo.html
+++ b/src/main/resources/public/personInfo.html
@@ -10,7 +10,7 @@
 <body>
     <div class ="sidebar">
         <div class ="logo">
-            <a href="/index.ftl">MySecret</a>
+            <a href="/">MySecret</a>
         </div>
         
         <div class = "user" style="text-align: center;">         
