--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>Small Lights</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="style.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <div class="head"><h1>Small Lights</h1></div>
-		
-        <div class="login_banner">
-            <div class ="login"><input type="submit" value="log in" name="login_1" /></div>
-            <div class="signin"><input type="submit" value="sign in" name="signin_1" /></div>
-        </div>
-        <br>
-		<br>
-		
-        <div class="icon">
-            <input type="radio" name="sights" value="icon" id="sights"/>sights<img id ="home_s" src="images/sights.jpg" alt="sights" width=300 height=300 onclick="location='sights.html'">
-            <input type="radio" name="restaurants" value="icon" id="restaurants"/>restaurants<img id ="home_r" src="images/restaurants.jpg" alt="restaurants" width=300 height=300 onclick="location='restaurants.html'">
-            <input type="radio" name="bars" value="icon" id="bars"/>bars<img id ="home_b" src="images/bars.jpg" alt="bars" width=300 height=300 onclick="location='bars.html'">
-            <input type="radio" name="others" value="icon" id="others"/>others<img id ="home_o" src="images/others.jpg" alt="others" width=300 height=300 onclick="location='others.html'">
-        </div>
-    </body>
+<head>
+  <title>Java Grunt Example</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.min.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="js/testassignment4-BrianKolowitz.min.js"></script>
+</head>
+<body>
+  <p>Hello from Java Grunt!</p>
+</body>
 </html>
