--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Java Grunt Example</title>
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.min.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="js/testassignment4-BrianKolowitz.min.js"></script>
 </head>
 <body>
-  <p>Hello from INFSCI2560</p>
-  <p>it's late</p>
+  <p>Hello from Java Grunt!</p>
 </body>
 </html>
