--- a/src/main/resources/public/signin.html
+++ b/src/main/resources/public/signin.html
@@ -17,8 +17,8 @@ and open the template in the editor.
 		<form>
 			<input type="text" name="username" id="sign_username" placeholder="input your username"><br>
 			<input type="password" name="password" id="sign_password" placeholder="input your password"><br>
-			<button type="submit" name="signin">OK</button>
-			<button type="reset" name="signin_cancel"> Cancel</button>
+			<button type="submit" id="signin">OK</button>
+			<button type="reset" id="signin_cancel"> Cancel</button>
 		</form>
         
         <br>
