--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -10,8 +10,8 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<script type="text/javascript" src="script.js"></script>
-		<script type="text/javascript" src="login.js"></script>
+		<script type="text/javascript" src="javascript/script.js"></script>
+		<script type="text/javascript" src="javascript/login.js"></script>
     </head>
     <body>
         <div class="head"><h1>Small Lights</h1></div>
