--- a/src/main/resources/public/others.html
+++ b/src/main/resources/public/others.html
@@ -20,12 +20,10 @@ and open the template in the editor.
         </div>
         <br>
 		<br>
+        
+        <div class="msg"><p>There is no comments here! Add something now!</p></div>
+        <br>
 		
-        <div class="icon">
-            <input type="radio" name="sights" value="icon" id="sights"/>sights<img id ="home_s" src="images/sights.jpg" alt="sights" width=300 height=300 onclick="location='sights.html'">
-            <input type="radio" name="restaurants" value="icon" id="restaurants"/>restaurants<img id ="home_r" src="images/restaurants.jpg" alt="restaurants" width=300 height=300 onclick="location='restaurants.html'">
-            <input type="radio" name="bars" value="icon" id="bars"/>bars<img id ="home_b" src="images/bars.jpg" alt="bars" width=300 height=300 onclick="location='bars.html'">
-            <input type="radio" name="others" value="icon" id="others"/>others<img id ="home_o" src="images/others.jpg" alt="others" width=300 height=300 onclick="location='others.html'">
-        </div>
+        <div class="back_home"><a href="index.html">Click here to back to home page!</a></div>
     </body>
 </html>
